# tanim

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build-debug.bat  build-release.bat
.github/workflows/: build-binaries.yml  test-compilation.yml
assets/fonts/ARIALBD.TTF-msdf/: ARIALBD.TTF-msdf.json
assets/fonts/ARIALNB/: ARIALNB.TTF-msdf.json
src/: main.cpp
src/graphics/: camera.cpp  camera.h  font.cpp  font.h  gpu_types.h  renderer.cpp  renderer.h  text.cpp  text.h
src/platform/: glfw_webgpu_surface.cpp  glfw_wgpu_surface.cpp  glfw_wgpu_surface.h  glfw_wgpu_surface_metal.mm
src/util/: transform.cpp  transform.h  vector.h
